<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455FF3"
    tools:context=".Register">


    <LinearLayout
        android:id="@+id/container_logo_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_register"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/register"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/username_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity"
            android:textColor="#ffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_logo_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/form_register"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_register"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_register"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_register"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/container_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_register"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#4355C8"
                    android:onClick="toLogin"
                    android:text="@string/btn_register"
                    android:textColor="#ffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>