<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#455FF3">

    <LinearLayout
        android:id="@+id/container_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login2"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_logo_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/form_register"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_register"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_register"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/container_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_register"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#4355C8"
                    android:onClick="toMain"
                    android:text="@string/login_activity"
                    android:textColor="#ffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_marginLeft="10dp"
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#4355C8"
                    android:onClick="toRegister"
                    android:text="@string/btn_register"
                    android:textColor="#ffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>